added fetch api

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "dependencies": {
         "@babel/runtime": "7.12.5",
+        "mtgsdk": "0.4.3",
         "react": "17.0.1",
         "react-dom": "17.0.1"
     },
