--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "@babel/runtime": "7.12.5",
         "react": "17.0.1",
-        "react-dom": "17.0.1"
+        "react-dom": "17.0.1",
+        "react-rating": "2.0.5"
     },
     "devDependencies": {
         "@babel/core": "7.12.3",
