--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack --config webpack.config.js",
+        "start": "webpack ./src/index.jsx",
         "dev": "webpack serve --config webpack.config.js --mode development --open firefox",
         "build": "webpack --mode production"
     },
@@ -13,17 +13,17 @@
     "license": "MIT",
     "dependencies": {
         "@babel/core": "7.12.3",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-rating": "2.0.5"
+    },
+    "devDependencies": {
         "@babel/runtime": "7.12.5",
         "@babel/preset-react": "7.12.5",
         "@babel/plugin-syntax-dynamic-import": "7.8.3",
         "@babel/plugin-transform-runtime": "7.12.1",
         "@babel/preset-env": "7.12.1",
         "babel-loader": "8.2.1",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
-        "react-rating": "2.0.5"
-    },
-    "devDependencies": {
         "css-loader": "5.0.1",
         "css-minimizer-webpack-plugin": "1.1.5",
         "html-webpack-plugin": "4.5.0",
