--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "webpack serve --config webpack.config.js --mode development --open firefox",
-        "build": "webpack --mode production"
+        "start": "webpack serve --mode development --open firefox",
+        "build": "webpack --mode production --config webpack.config.js"
     },
     "keywords": [],
     "author": "jb_nightcoder",
     "license": "MIT",
     "dependencies": {
-        "@babel/core": "7.12.3",
+        "@babel/runtime": "7.12.5",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "react-rating": "2.0.5"
     },
     "devDependencies": {
-        "@babel/runtime": "7.12.5",
+        "@babel/core": "7.12.3",
         "@babel/preset-react": "7.12.5",
         "@babel/plugin-syntax-dynamic-import": "7.8.3",
         "@babel/plugin-transform-runtime": "7.12.1",
